--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ xmonad/history
 vim/.netrwhist
 vim/spell/en.utf-8.add
 vim/spell/en.utf-8.add.spl
+vim/bundle/*/doc/tags
+vim/bundle/*/doc/tags-*
 *.swp
 passwords.kdb.lock
 zsh/cache
