--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "vim/bundle/jshint.vim"]
 	path = vim/bundle/jshint.vim
 	url = git://github.com/walm/jshint.vim.git
+[submodule "zsh/adenosine"]
+	path = zsh/adenosine
+	url = git://github.com/frioux/app-adenosine
