add monitor keys

--- a/tmux.conf
+++ b/tmux.conf
@@ -27,6 +27,9 @@ bind T split-window -dv -p 25 '$SHELL -c "prove -lrsj10 t && sleep 1 || zsh"'
 bind I new-window "mosh -- irc screen -x" \; \
        rename-window "irc"
 
+bind _ set monitor-silence 30
+bind M set monitor-activity on
+
 # screen keys (from http://tmux.svn.sourceforge.net/viewvc/tmux/trunk/examples/screen-keys.conf?revision=2562&view=markup)
 # Bind appropriate commands similar to screen.
 # lockscreen ^X x
