--- a/tmux.conf
+++ b/tmux.conf
@@ -27,8 +27,10 @@ bind T split-window -dv -p 25 '$SHELL -c "prove -lrsj10 t && sleep 1 || zsh"'
 bind I new-window "mosh -- irc screen -x" \; \
        rename-window "irc"
 
-bind _ set monitor-silence 30
-bind M set monitor-activity on
+bind _ if-shell "tmux show-window-options -g \\; show-window-options | grep monitor-silence | tail -n 1 | grep -q 30" \
+    "set-window-option monitor-silence 0  ; display-message 'silence monitoring OFF'" \
+    "set-window-option monitor-silence 30 ; display-message 'monitoring for 30s silence'"
+bind M set monitor-activity
 
 # screen keys (from http://tmux.svn.sourceforge.net/viewvc/tmux/trunk/examples/screen-keys.conf?revision=2562&view=markup)
 # Bind appropriate commands similar to screen.
