--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,6 @@
 [submodule "vim/bundle/vim-textobj-underscore"]
 	path = vim/bundle/vim-textobj-underscore
 	url = git://github.com/lucapette/vim-textobj-underscore.git
+[submodule "vim/bundle/vim-unimpaired"]
+	path = vim/bundle/vim-unimpaired
+	url = git://github.com/tpope/vim-unimpaired.git
