--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "vim/bundle/vim-unimpaired"]
 	path = vim/bundle/vim-unimpaired
 	url = git://github.com/tpope/vim-unimpaired.git
+[submodule "vim/bundle/vim-textobj-lastpat"]
+	path = vim/bundle/vim-textobj-lastpat
+	url = git://github.com/kana/vim-textobj-lastpat.git
