--- a/ssh/config
+++ b/ssh/config
@@ -51,3 +51,13 @@ host w
      user frew
      ForwardAgent yes
 
+host s1
+     user Administrator
+     ForwardAgent yes
+     hostname 172.24.1.206
+
+host s2
+     user frew
+     ForwardAgent yes
+     hostname 206.190.248.90
+
