--- a/tmux.conf
+++ b/tmux.conf
@@ -130,3 +130,5 @@ setw -g pane-active-border-fg cyan
 
 bind C-c run "tmux save-buffer - | xclip -i -selection clipboard"
 bind C-v run "tmux set-buffer \"$(xclip -o -selection clipboard)\"; tmux paste-buffer"
+
+# vim: ft=tmux
