--- a/weechat/logger.conf
+++ b/weechat/logger.conf
@@ -15,7 +15,7 @@ flush_delay = 120
 info_lines = off
 mask = "$plugin.$name.weechatlog"
 name_lower_case = on
-path = "%h/logs/"
+path = "/home/frew/weelogs/"
 replacement_char = "_"
 time_format = "%Y-%m-%d %H:%M:%S"
 
