--- a/tmux.conf
+++ b/tmux.conf
@@ -24,7 +24,7 @@ bind u capture-pane \; \
        split-window -v -p 25 '$SHELL -c "urlview < /tmp/tmux-buffer"'
 
 bind T split-window -dv -p 25 '$SHELL -c "prove -lrsj10 t && sleep 1 || zsh"'
-bind I new-window "mosh -- irc screen -x" \; \
+bind I new-window "mosh -- irc tmux attach-session" \; \
        rename-window "irc"
 
 bind _ if-shell "tmux show-window-options -g \\; show-window-options | grep monitor-silence | tail -n 1 | grep -q 30" \
