--- a/tmux.conf
+++ b/tmux.conf
@@ -24,8 +24,7 @@ bind u capture-pane \; \
        split-window -v -p 25 '$SHELL -c "urlview < /tmp/tmux-buffer"'
 
 bind T split-window -dv -p 25 '$SHELL -c "prove -lrsj10 t && sleep 1 || zsh"'
-bind I new-window "mosh -- irc tmux attach-session" \; \
-       rename-window "irc"
+bind I new-window -n irc "mosh -- irc tmux attach-session"
 
 bind _ if-shell "tmux show-window-options -g \\; show-window-options | grep monitor-silence | tail -n 1 | grep -q 30" \
     "set-window-option monitor-silence 0  ; display-message 'silence monitoring OFF'" \
