--- a/weechat/alias.conf
+++ b/weechat/alias.conf
@@ -103,22 +103,23 @@
 97 = "buffer 97"
 98 = "buffer 98"
 99 = "buffer 99"
-bl = "query -bitlbee barrett"
-c4 = "query -bitlbee c4"
+bbq = "query -server bitlbee"
+bl = "buffer bitlbee.barrett"
+c4 = "bbq c4"
 cb = "query -bitlbee cameron"
-cm = "query -bitlbee chrismd"
+cm = "bbq chrismd"
 dbi = "win goto #dbi"
-gd = "query -bitlbee geoff"
+gd = "bbq geoff"
 git = "buffer #git"
-ko = "query -bitlbee kevin"
-ml = "query -bitlbee mlusby"
+ko = "bbq kevin"
+ml = "bbq mlusby"
 mutt = "buffer #mutt"
-nd = "query -bitlbee nathan"
-ng = "query -bitlbee neil"
-sb = "query -bitlbee shannon"
+nd = "bbq nathan"
+ng = "bbq neil"
+sb = "bbq shannon"
 vim = "buffer #vim"
 w = "buffer"
-wm = "query -bitlbee wes"
+wm = "bbq wes"
 zsh = "buffer #zsh"
 
 [completion]
