--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -35,7 +35,7 @@ new_channel_position = none
 new_pv_position = none
 nick_color_force = ""
 nick_color_stop_chars = "_|["
-nick_completion_smart = speakers_highlights
+nick_completion_smart = speakers
 nick_mode = prefix
 nick_mode_empty = off
 nick_prefix = ""
