shuffle from moving servers

--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -256,42 +256,35 @@ buffer = "irc;perl.#moose;4"
 buffer = "irc;perl.#web-simple;5"
 buffer = "irc;perl.#dbic-cabal;6"
 buffer = "irc;perl.#plack;7"
-buffer = "irc;perl.mst;8"
-buffer = "irc;bitlbee.&bitlbee;9"
-buffer = "irc;bitlbee.wes;10"
-buffer = "irc;bitlbee.geoff;11"
-buffer = "irc;bitlbee.kevin;12"
-buffer = "irc;bitlbee.c4;13"
-buffer = "irc;bitlbee.nathan;14"
-buffer = "irc;bitlbee.neil;15"
-buffer = "irc;bitlbee.shannon;16"
-buffer = "irc;freenode.#zsh;17"
-buffer = "irc;bitlbee.barrett;18"
-buffer = "irc;perl.rjbs;19"
-buffer = "irc;perl.#p5p;20"
-buffer = "irc;perl.#dbi;21"
-buffer = "irc;perl.#dbic-smoke;22"
-buffer = "irc;perl.#distzilla;23"
-buffer = "irc;perl.#gid;24"
-buffer = "irc;freenode.#jenkins;25"
-buffer = "irc;freenode.#mosh;26"
-buffer = "irc;freenode.#mutt;27"
-buffer = "irc;freenode.#offlineimap;28"
-buffer = "irc;freenode.#openssh;29"
-buffer = "irc;freenode.#pegex;30"
-buffer = "irc;freenode.#perl;31"
-buffer = "irc;freenode.#tmux;32"
-buffer = "irc;perl.#toolchain;33"
-buffer = "irc;perl.#webmachine;34"
-buffer = "irc;perl.#kiokudb;35"
-buffer = "irc;perl.#sql-translator;36"
-buffer = "irc;freenode.#ubuntu;37"
-buffer = "irc;bitlbee.barrett;38"
-buffer = "irc;freenode.#git;39"
-buffer = "irc;freenode.#vim;40"
-buffer = "irc;freenode.#weechat;41"
-buffer = "irc;freenode.#xbmc;42"
-buffer = "irc;oftc.#awesome;43"
+buffer = "irc;bitlbee.&bitlbee;8"
+buffer = "irc;bitlbee.wes;9"
+buffer = "irc;freenode.#zsh;10"
+buffer = "irc;perl.#p5p;11"
+buffer = "irc;perl.#dbi;12"
+buffer = "irc;perl.#distzilla;13"
+buffer = "irc;perl.#gid;14"
+buffer = "irc;freenode.#jenkins;15"
+buffer = "irc;freenode.#mosh;16"
+buffer = "irc;freenode.#mutt;17"
+buffer = "irc;freenode.#offlineimap;18"
+buffer = "irc;freenode.#openssh;19"
+buffer = "irc;freenode.#pegex;20"
+buffer = "irc;freenode.#tmux;21"
+buffer = "irc;perl.#toolchain;22"
+buffer = "irc;perl.#webmachine;23"
+buffer = "irc;perl.#kiokudb;24"
+buffer = "irc;perl.#sql-translator;25"
+buffer = "irc;freenode.#git;26"
+buffer = "irc;freenode.#weechat;27"
+buffer = "irc;oftc.#awesome;28"
+buffer = "irc;bitlbee.twitter_BitlBee;29"
+buffer = "irc;bitlbee.#twitter_bitlbee;30"
+buffer = "irc;perl.#kiokidb;31"
+buffer = "irc;perl.#io-all;32"
+buffer = "irc;perl.#perl-help;33"
+buffer = "irc;perl.#io-async;34"
+buffer = "irc;freenode.rjbs;35"
+window = "1;0;0;0;irc;perl.#dbix-class"
 
 [notify]
 
