weechat is my proxy now

--- a/weechat/irc.conf
+++ b/weechat/irc.conf
@@ -124,19 +124,19 @@ ssl = off
 ssl_cert = ""
 ssl_dhkey_size = 2048
 ssl_priorities = "NORMAL"
-ssl_verify = on
+ssl_verify = off
 username = "frew"
 
 [server]
-perl.addresses = "warpedreality.org/39564"
+perl.addresses = "irc.perl.org/6667"
 perl.proxy
 perl.ipv6
-perl.ssl = on
+perl.ssl = off
 perl.ssl_cert
 perl.ssl_priorities
 perl.ssl_dhkey_size
 perl.ssl_verify = off
-perl.password = "perl:..."
+perl.password
 perl.capabilities
 perl.sasl_mechanism
 perl.sasl_username
@@ -162,15 +162,15 @@ perl.away_check_max_nicks
 perl.default_msg_part
 perl.default_msg_quit
 perl.notify
-freenode.addresses = "warpedreality.org/39564"
+freenode.addresses = "asimov.freenode.net/6667"
 freenode.proxy
 freenode.ipv6
-freenode.ssl = on
+freenode.ssl = off
 freenode.ssl_cert
 freenode.ssl_priorities
 freenode.ssl_dhkey_size
 freenode.ssl_verify = off
-freenode.password = "freenode:..."
+freenode.password
 freenode.capabilities
 freenode.sasl_mechanism
 freenode.sasl_username
@@ -196,15 +196,15 @@ freenode.away_check_max_nicks
 freenode.default_msg_part
 freenode.default_msg_quit
 freenode.notify
-bitlbee.addresses = "warpedreality.org/39564"
+bitlbee.addresses = "localhost/6667"
 bitlbee.proxy
 bitlbee.ipv6
-bitlbee.ssl = on
+bitlbee.ssl = off
 bitlbee.ssl_cert
 bitlbee.ssl_priorities
 bitlbee.ssl_dhkey_size
 bitlbee.ssl_verify = off
-bitlbee.password = "bitlbee:..."
+bitlbee.password
 bitlbee.capabilities
 bitlbee.sasl_mechanism
 bitlbee.sasl_username
@@ -230,15 +230,15 @@ bitlbee.away_check_max_nicks
 bitlbee.default_msg_part
 bitlbee.default_msg_quit
 bitlbee.notify
-oftc.addresses = "warpedreality.org/39564"
+oftc.addresses = "irc.oftc.net/6667"
 oftc.proxy
 oftc.ipv6
-oftc.ssl = on
+oftc.ssl = off
 oftc.ssl_cert
 oftc.ssl_priorities
 oftc.ssl_dhkey_size
 oftc.ssl_verify = off
-oftc.password = "oftc:..."
+oftc.password
 oftc.capabilities
 oftc.sasl_mechanism
 oftc.sasl_username
