--- a/filetree/CMakeLists.txt
+++ b/filetree/CMakeLists.txt
@@ -37,6 +37,9 @@ new_ec_test(parent_dir_overload parent_directory.in parent_directory/test.c "^ke
 # Test that search stops at root EditorConfig file
 new_ec_test(root_file root_file.in root_file/test.a "^[ \t\n\r]*$")
 
+# Test that search stops at root EditorConfig file
+new_ec_test(root_file_mixed_case root_file.in root_mixed/test.a "^child=true[ \t\n\r]*$")
+
 # Tests path separator match
 new_ec_test(path_separator path_separator.in path/separator "^key=value[ \t\n\r]*$")
 
