--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "zsh/todotxt"]
 	path = zsh/todotxt
 	url = git://github.com/ginatrapani/todo.txt-cli.git
+[submodule "vim/bundle/synastic"]
+	path = vim/bundle/synastic
+	url = git://github.com/scrooloose/syntastic.git
