--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = http://git.sysphere.org/vicious
 [submodule "awesome/utils"]
 	path = awesome/utils
-	url = git://github.com/Mic92/utils.git
+	url = git://github.com/frioux/awesome-utils.git
 [submodule "zsh/zaw"]
 	path = zsh/zaw
 	url = git://github.com/zsh-users/zaw.git
