--- a/.gitmodules
+++ b/.gitmodules
@@ -91,3 +91,6 @@
 [submodule "vim/bundle/vim-airline"]
 	path = vim/bundle/vim-airline
 	url = git://github.com/bling/vim-airline
+[submodule "vim/bundle/vim-perl"]
+	path = vim/bundle/vim-perl
+	url = git://github.com/vim-perl/vim-perl
