replace bpan with bashplus

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "ext/bpan-bash"]
-	path = ext/bpan-bash
-	url = https://github.com/ingydotnet/bpan-bash.git
 [submodule "ext/test-tap-bash"]
 	path = ext/test-tap-bash
 	url = https://github.com/ingydotnet/test-tap-bash.git
+[submodule "ext/bashplus"]
+	path = ext/bashplus
+	url = https://github.com/ingydotnet/bashplus.git
