--- a/.gitmodules
+++ b/.gitmodules
@@ -100,3 +100,6 @@
 [submodule "vim/bundle/crunch"]
 	path = vim/bundle/crunch
 	url = git://github.com/arecarn/crunch
+[submodule "vim/bundle/vinegar"]
+	path = vim/bundle/vinegar
+	url = git://github.com/tpope/vim-vinegar
