always use GH issues

--- a/dzil/profiles/default/profile.ini
+++ b/dzil/profiles/default/profile.ini
@@ -40,6 +40,7 @@ content = [NextRelease]
 content = [@Git]
 content = [@Basic]
 content = [GithubMeta]
+issues = 1
 content = [MetaJSON]
 content = [PodWeaver]
 content = [PkgVersion]
